deploy/k8s/tlotr-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tlotr
    environment: local
    tier: backend
  name: tlotr-back
  namespace: tlotr-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: tlotr
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    tier: backend
    app: tlotr
    environment: local
  name: tlotr-back
  namespace: tlotr-app
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
      app: tlotr
  template:
    metadata:
      labels:
        tier: backend
        app: tlotr
        environment: local
    spec:
      containers:
      - image: nicktorwald/tlotr-back:0.0.1
        name: tlotr-back
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
          requests:
            memory: "512Mi"
            cpu: "500m"
